[gd_scene load_steps=13 format=3 uid="uid://c7curl3qmx4sf"]

[ext_resource type="Texture2D" uid="uid://bqcjpt24lk1qj" path="res://UI/Options Menu/InGameMenuBLANK.png" id="1_y5fub"]
[ext_resource type="Texture2D" uid="uid://b4o8wkidp0yp7" path="res://UI/menu/OpeningBackground.jpg" id="2_062eh"]
[ext_resource type="Script" path="res://Levels/main_menu_options.gd" id="2_n16qu"]
[ext_resource type="Texture2D" uid="uid://dye5wxpflfgb3" path="res://UI/Options Menu/MainMenuButton.png" id="2_pon2q"]
[ext_resource type="Texture2D" uid="uid://bqkrsyqrvcu0j" path="res://UI/Options Menu/MainMenuButtonHover.png" id="3_omh8t"]
[ext_resource type="Texture2D" uid="uid://b0f84dwpdswa7" path="res://UI/Options Menu/QuitButton.png" id="4_iifld"]
[ext_resource type="Texture2D" uid="uid://t4hhrpltayeu" path="res://UI/Options Menu/QuitButtonHover.png" id="5_hfgpf"]
[ext_resource type="Theme" uid="uid://d3l76yiraqpte" path="res://UI/Dialogue Box/fontDark.tres" id="6_ywb55"]
[ext_resource type="Texture2D" uid="uid://csr28gimoi7v8" path="res://UI/Options Menu/SliderButton.png" id="7_uls5t"]
[ext_resource type="Texture2D" uid="uid://cm55iqd2mqjn6" path="res://UI/Options Menu/SliderBar.png" id="8_4xt0i"]

[sub_resource type="Theme" id="Theme_j8c08"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ey6as"]
texture = ExtResource("8_4xt0i")
texture_margin_left = 10.0
texture_margin_top = 1.0
texture_margin_bottom = 5.0

[node name="Main Menu Options" type="TextureRect"]
offset_left = 32.0
offset_top = 7.99997
offset_right = 1952.0
offset_bottom = 1088.0
scale = Vector2(0.628811, 0.62402)
texture = ExtResource("1_y5fub")
script = ExtResource("2_n16qu")

[node name="TextureMenuBackground" type="TextureRect" parent="."]
z_index = -1
layout_mode = 2
offset_left = -90.6473
offset_top = -57.6904
offset_right = 978.353
offset_bottom = 592.31
scale = Vector2(2, 2)
texture = ExtResource("2_062eh")

[node name="VBoxContainer Menu Buttons" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 550.0
offset_top = 310.0
offset_right = 1134.0
offset_bottom = 704.0
scale = Vector2(0.435, 0.435)
theme_override_constants/separation = 70

[node name="Main Menu Button" type="TextureButton" parent="VBoxContainer Menu Buttons"]
layout_mode = 2
texture_normal = ExtResource("2_pon2q")
texture_hover = ExtResource("3_omh8t")

[node name="Quit Button" type="TextureButton" parent="VBoxContainer Menu Buttons"]
layout_mode = 2
texture_normal = ExtResource("4_iifld")
texture_hover = ExtResource("5_hfgpf")

[node name="Settings Options" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 1000.3
offset_top = 298.067
offset_right = 1452.3
offset_bottom = 843.067
theme = ExtResource("6_ywb55")

[node name="Screen Size Label" type="Label" parent="Settings Options"]
layout_mode = 2
theme = ExtResource("6_ywb55")
theme_override_colors/font_color = Color(0.796078, 0.654902, 0.145098, 1)
theme_override_font_sizes/font_size = 19
text = "Screen Size"

[node name="Fullscreen Label" type="Label" parent="Settings Options"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Fullscreen"

[node name="Difficulty Label" type="Label" parent="Settings Options"]
layout_mode = 2
theme_override_colors/font_color = Color(0.796078, 0.654902, 0.321569, 1)
theme_override_font_sizes/font_size = 19
text = "Difficulty"

[node name="Difficulty Slider" type="HSlider" parent="Settings Options"]
layout_mode = 2
theme = SubResource("Theme_j8c08")
theme_override_constants/center_grabber = 0
theme_override_constants/grabber_offset = 0
theme_override_icons/grabber = ExtResource("7_uls5t")
theme_override_icons/grabber_highlight = ExtResource("7_uls5t")
theme_override_styles/slider = SubResource("StyleBoxTexture_ey6as")
min_value = 1.0
max_value = 3.0
value = 1.0
tick_count = 3

[node name="Easy Medium Hard Label" type="Label" parent="Settings Options"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Easy                                 Medium                             Hard"

[node name="Camera Speed Label" type="Label" parent="Settings Options"]
layout_mode = 2
theme_override_colors/font_color = Color(0.796078, 0.654902, 0.145098, 1)
theme_override_font_sizes/font_size = 19
text = "Camera Speed"

[node name="Edge Pan Label" type="Label" parent="Settings Options"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Edge Pan"

[node name="Edge Pan Slider" type="HSlider" parent="Settings Options"]
layout_mode = 2
theme = SubResource("Theme_j8c08")
theme_override_constants/center_grabber = 0
theme_override_constants/grabber_offset = 0
theme_override_icons/grabber = ExtResource("7_uls5t")
theme_override_icons/grabber_highlight = ExtResource("7_uls5t")
theme_override_styles/slider = SubResource("StyleBoxTexture_ey6as")

[node name="Camera Grip Label" type="Label" parent="Settings Options"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Camera Grip"

[node name="Camera Grip Slider" type="HSlider" parent="Settings Options"]
layout_mode = 2
theme = SubResource("Theme_j8c08")
theme_override_constants/center_grabber = 0
theme_override_constants/grabber_offset = 0
theme_override_icons/grabber = ExtResource("7_uls5t")
theme_override_icons/grabber_highlight = ExtResource("7_uls5t")
theme_override_styles/slider = SubResource("StyleBoxTexture_ey6as")

[node name="Arrow Keys Label" type="Label" parent="Settings Options"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Arrow Keys"

[node name="Arrow Keys Slider" type="HSlider" parent="Settings Options"]
layout_mode = 2
theme = SubResource("Theme_j8c08")
theme_override_constants/center_grabber = 0
theme_override_constants/grabber_offset = 0
theme_override_icons/grabber = ExtResource("7_uls5t")
theme_override_icons/grabber_highlight = ExtResource("7_uls5t")
theme_override_styles/slider = SubResource("StyleBoxTexture_ey6as")
value = 50.0

[connection signal="pressed" from="VBoxContainer Menu Buttons/Main Menu Button" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="VBoxContainer Menu Buttons/Quit Button" to="." method="_on_quit_button_pressed"]
[connection signal="value_changed" from="Settings Options/Difficulty Slider" to="." method="_on_difficulty_slider_value_changed"]
[connection signal="value_changed" from="Settings Options/Edge Pan Slider" to="." method="_on_edge_pan_slider_value_changed"]
[connection signal="value_changed" from="Settings Options/Camera Grip Slider" to="." method="_on_camera_grip_slider_value_changed"]
[connection signal="value_changed" from="Settings Options/Arrow Keys Slider" to="." method="_on_arrow_keys_slider_value_changed"]
